@@ -1,4 +1,6 @@
 1.7.1	????-??-??
+	* bugfix #1260: Anticipate strchr returning NULL on unfound char
+	  Thanks Stephan Zeisberg
 	* bugfix #1257: Free after reallocing to 0 size
 	  Thanks Stephan Zeisberg
 	* bugfix #1256: Check parse limit before t increment
